--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+     <main>
+		 <nav>
+			 <ul>
+				<li><a href="#">Home</a></li>
+				 <li><a href="#">About Us</a></li>
+				 <li><a href="#">Contact Us</a></li>
+			 </ul>
+		 </nav>
+
+		 <div>
+			 <img src="https://picsum.photos/id/123/200/300" alt=" ">
+			  <img src="https://picsum.photos/id/124/200/300" alt=" ">
+			  <img src="https://picsum.photos/id/125/200/300" alt=" ">
+	 </main>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
