--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
 		 </nav>
 
 		 <div>
+			 <h1>3 random images </h1>
 			 <img src="https://picsum.photos/id/123/200/300" alt=" ">
 			  <img src="https://picsum.photos/id/124/200/300" alt=" ">
 			  <img src="https://picsum.photos/id/125/200/300" alt=" ">
