--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
 
 		 <div>
 			 <h1>3 random images </h1>
-			 <img src="https://picsum.photos/id/123/200/300" alt=" ">
-			  <img src="https://picsum.photos/id/124/200/300" alt=" ">
-			  <img src="https://picsum.photos/id/125/200/300" alt=" ">
+			 <img src="https://picsum.photos/id/123/200/300" alt="image 1">
+			  <img src="https://picsum.photos/id/124/200/300" alt="image 2">
+			  <img src="https://picsum.photos/id/125/200/300" alt="image 3">
 	 </main>
 	
     <script type="text/javascript" src="./script.js">
